modify homepage UI

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -4,24 +4,37 @@
 
 :root
   --bg-color-1: #44617B
+  --bg-cam-btn: #EBF6F7
+  --bg-fav-btn: #BADCAD
+  --bg-his-btn: #FEF263
 
-#home-container
-  display: block
+
+.container
   position: fixed
+  background-color: var(--bg-color-1)
   top: 0
   left: 0
   width: 100%
   height: 100%
-  #background
-    width: 100%
-    height: 100%
-    background-color: var(--bg-color-1)
+
+  .exit-btn
+    position: fixed
+    height: 6rem
+    width: 6rem
+    z-index: 3
+
+#home-container
+  display: block
+  background-color: var(--bg-color-1)
+
   #title
     position: absolute
-    top: 20%
+    top: 25%
     left: 15%
-    font-size: 10rem
+    font-size: 13rem
     font-color: black
+    width: 50%
+    line-height: 10rem
     color: white
   #btn-group
     .btns
@@ -29,24 +42,50 @@
       font-size: 6rem
       font-color: black
     #camera-btn
+      background-color: var(--bg-cam-btn)
       top: 50%
-      left: 20%
+      left: 17%
+      height: 15rem
+      width: 15rem
+      padding: 5rem
+      border-radius: 2rem
+      #camera-icon
+        height: 100%
+        width: 100%
+
     #favorite-btn
-      top: 60%
-      right: 20%
+      background-color: var(--bg-fav-btn)
+      top: 62%
+      right: 0%
+      height: 8rem
+      width: 8rem
+      transform: translate(-100%, 0%)
+      padding: 2rem
+      border-radius: 2rem
+      #camera-icon
+        height: 100%
+        width: 100%
+
     #history-btn
-      top: 40%
-      right: 20%
+      background-color: var(--bg-his-btn)
+      top: 50%
+      right: 0.5rem
+      height: 8rem
+      width: 8rem
+      transform: translate(calc(-100% + 0.5rem), 0%)
+      padding: 2rem 2.5rem 2rem 1.5rem
+      border-radius: 2rem
+      #camera-icon
+        height: 100%
+        width: 100%
 
 
 #camera-container
   display: none
-  position: fixed
-  top: 0
-  left: 0
-  width: 100%
-  height: 100%
-  background-color: black
+
+  #camera-exit
+    top: 2rem
+    left: 2rem
 
   #cam-window 
     //TODO: 插入相機畫面
@@ -54,10 +93,10 @@
     display: block
     position: fixed
     transform: translate(-50%, 0%)
-    top: 3rem
+    top: 9%
     left: 50%
     width: 90%
-    height: 80%
+    height: 75%
     background-color: orange
 
   #shoot-btn:active
@@ -79,3 +118,15 @@
     #element-2.elements
     #element-3.elements
     #element-4.elements
+
+
+#favorite-container
+  display: none
+
+  #favorite-exit
+
+
+#history-container
+  display: none
+
+  #history-exit
