--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -5,6 +5,9 @@ html
     link(href="../../static/sass/dist/homepage.css",rel="stylesheet",type="text/css")
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js")
     script(src="../../static/js/homepage.js")
+    script(src="../../static/js/app.js")
+    link(href="manifest.json", rel="manifest")
+    meta(name="theme-color" content="#44617B")
 
   body
     #home-container.container
