--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -32,7 +32,7 @@ html
 
     #favorite-container.container
       img#favorite-exit.exit-btn(src='../../static/file/cross-icon.png')
-
+      #list-sw
 
     #history-container.container
       img#history-exit.exit-btn(src='../../static/file/cross-icon.png')
