get Geolocation info and print in console

--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -29,6 +29,15 @@ html
         #element-2.elements
         #element-3.elements
         #element-4.elements
+      script.
+        //- if(navigator.geolocation) {
+        //-   navigator.geolocation.getCurrentPosition(function(position){
+        //-     console.log(position);
+        //-     console.log('geolocation is supported');
+        //-   });}
+        //- else{
+        //-   console.log('geolocation is not supported');
+        //- }
 
     #favorite-container.container
       img#favorite-exit.exit-btn(src='../../static/file/cross-icon.png')
