add start camera

--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -22,7 +22,8 @@ html
 
     #camera-container.container
       img#camera-exit.exit-btn(src='../../static/file/previous-icon-w.png')
-      #cam-window 
+      video#cam-window(autoplay playsinline)
+      canvas#cam-sensor 
       #shoot-btn
       #restaurant-list.list 
         #element-1.elements
