--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -100,8 +100,6 @@
     left: 2rem
 
   #cam-window 
-    //TODO: 插入相機畫面
-
     display: block
     position: fixed
     transform: translate(-50%, 0%)
@@ -109,7 +107,17 @@
     left: 50%
     width: 90%
     height: 75%
-    background-color: orange
+    object-fit: cover
+
+  #cam-sensor
+    display: block
+    position: fixed
+    transform: translate(-50%, 0%)
+    top: 9%
+    left: 50%
+    width: 90%
+    height: 75%
+    object-fit: cover
 
   #shoot-btn:active
     opacity: 0.8
