--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -27,6 +27,20 @@
   .exit-btn:active
     transform: scale(0.97)
 
+#status-container
+  position: fixed
+  height: 10%
+  width: 100%
+  top: 0
+  left: 0
+  z-index: 1
+  #gps-signal
+    position: absolute
+    right: 1rem
+    top: 1.5rem
+    height: 5rem
+    width: 5rem
+
 #home-container
   display: block
   background-color: var(--bg-color-1)
