--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -8,8 +8,12 @@ html
     script(src="../../static/js/app.js")
     link(href="manifest.json", rel="manifest")
     meta(name="theme-color" content="#44617B")
+    meta(name="viewport" content="user-scalable=no, shrink-to-fit=no")
 
   body
+    #status-container
+      img#gps-signal(src='../../static/file/gps-n.png')
+
     #home-container.container
       #title Food cam
       #btn-group
