--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -46,7 +46,193 @@ html
 
     #favorite-container.container
       img#favorite-exit.exit-btn(src='../../static/file/cross-icon.png')
+      h1.title(align='center')
+        b 我的最愛
       #list-sw
+      #favorite_list.list
+        .shop-item
+          p.shop-name(align='center') 大夯牛排館 Da-hang Steak house
+          p.score 4.4
+          .ratings
+            .empty_star ★★★★★
+            .full_star ★★★★★
+          p.command 1825則評論
+          p.phone-number 電話:06-2365768
+          p.business-hours 營業時間:11:00-21:00
+          .small-block 電話
+          .small-block 網站
+          .small-block 儲存
+
+        .shop-item
+          p.shop-name(align='center') 大夯牛排館 Da-hang Steak house
+          p.score 4.4
+          .ratings
+            .empty_star ★★★★★
+            .full_star ★★★★★
+          p.command 1825則評論
+          p.phone-number 電話:06-2365768
+          p.business-hours 營業時間:11:00-21:00
+          .small-block 電話
+          .small-block 網站
+          .small-block 儲存
+
+        .shop-item
+          p.shop-name(align='center') 大夯牛排館 Da-hang Steak house
+          p.score 4.4
+          .ratings
+            .empty_star ★★★★★
+            .full_star ★★★★★
+          p.command 1825則評論
+          p.phone-number 電話:06-2365768
+          p.business-hours 營業時間:11:00-21:00
+          .small-block 電話
+          .small-block 網站
+          .small-block 儲存
+
+        .shop-item
+          p.shop-name(align='center') 大夯牛排館 Da-hang Steak house
+          p.score 4.4
+          .ratings
+            .empty_star ★★★★★
+            .full_star ★★★★★
+          p.command 1825則評論
+          p.phone-number 電話:06-2365768
+          p.business-hours 營業時間:11:00-21:00
+          .small-block 電話
+          .small-block 網站
+          .small-block 儲存
+
+        .shop-item
+          p.shop-name(align='center') 大夯牛排館 Da-hang Steak house
+          p.score 4.4
+          .ratings
+            .empty_star ★★★★★
+            .full_star ★★★★★
+          p.command 1825則評論
+          p.phone-number 電話:06-2365768
+          p.business-hours 營業時間:11:00-21:00
+          .small-block 電話
+          .small-block 網站
+          .small-block 儲存
+          
+        .shop-item
+          p.shop-name(align='center') 大夯牛排館 Da-hang Steak house
+          p.score 4.4
+          .ratings
+            .empty_star ★★★★★
+            .full_star ★★★★★
+          p.command 1825則評論
+          p.phone-number 電話:06-2365768
+          p.business-hours 營業時間:11:00-21:00
+          .small-block 電話
+          .small-block 網站
+          .small-block 儲存
+
+        .shop-item
+          p.shop-name(align='center') 大夯牛排館 Da-hang Steak house
+          p.score 4.4
+          .ratings
+            .empty_star ★★★★★
+            .full_star ★★★★★
+          p.command 1825則評論
+          p.phone-number 電話:06-2365768
+          p.business-hours 營業時間:11:00-21:00
+          .small-block 電話
+          .small-block 網站
+          .small-block 儲存
 
     #history-container.container
       img#history-exit.exit-btn(src='../../static/file/cross-icon.png')
+      h1.title(align='center')
+        b 歷史紀錄
+      #history_list.list
+        .shop-item
+          p.shop-name(align='center') 大夯牛排館 Da-hang Steak house
+          p.score 4.4
+          .ratings
+            .empty_star ★★★★★
+            .full_star ★★★★★
+          p.command 1825則評論
+          p.phone-number 電話:06-2365768
+          p.business-hours 營業時間:11:00-21:00
+          .small-block 電話
+          .small-block 網站
+          .small-block 儲存
+
+        .shop-item
+          p.shop-name(align='center') 大夯牛排館 Da-hang Steak house
+          p.score 4.4
+          .ratings
+            .empty_star ★★★★★
+            .full_star ★★★★★
+          p.command 1825則評論
+          p.phone-number 電話:06-2365768
+          p.business-hours 營業時間:11:00-21:00
+          .small-block 電話
+          .small-block 網站
+          .small-block 儲存
+
+        .shop-item
+          p.shop-name(align='center') 大夯牛排館 Da-hang Steak house
+          p.score 4.4
+          .ratings
+            .empty_star ★★★★★
+            .full_star ★★★★★
+          p.command 1825則評論
+          p.phone-number 電話:06-2365768
+          p.business-hours 營業時間:11:00-21:00
+          .small-block 電話
+          .small-block 網站
+          .small-block 儲存
+
+        .shop-item
+          p.shop-name(align='center') 大夯牛排館 Da-hang Steak house
+          p.score 4.4
+          .ratings
+            .empty_star ★★★★★
+            .full_star ★★★★★
+          p.command 1825則評論
+          p.phone-number 電話:06-2365768
+          p.business-hours 營業時間:11:00-21:00
+          .small-block 電話
+          .small-block 網站
+          .small-block 儲存
+
+        .shop-item
+          p.shop-name(align='center') 大夯牛排館 Da-hang Steak house
+          p.score 4.4
+          .ratings
+            .empty_star ★★★★★
+            .full_star ★★★★★
+          p.command 1825則評論
+          p.phone-number 電話:06-2365768
+          p.business-hours 營業時間:11:00-21:00
+          .small-block 電話
+          .small-block 網站
+          .small-block 儲存
+
+        .shop-item
+          p.shop-name(align='center') 大夯牛排館 Da-hang Steak house
+          p.score 4.4
+          .ratings
+            .empty_star ★★★★★
+            .full_star ★★★★★
+          p.command 1825則評論
+          p.phone-number 電話:06-2365768
+          p.business-hours 營業時間:11:00-21:00
+          .small-block 電話
+          .small-block 網站
+          .small-block 儲存
+
+        .shop-item
+          p.shop-name(align='center') 大夯牛排館 Da-hang Steak house
+          p.score 4.4
+          .ratings
+            .empty_star ★★★★★
+            .full_star ★★★★★
+          p.command 1825則評論
+          p.phone-number 電話:06-2365768
+          p.business-hours 營業時間:11:00-21:00
+          .small-block 電話
+          .small-block 網站
+          .small-block 儲存
