add orientation (show on the top of camera page)

--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -28,6 +28,11 @@ html
       img#camera-exit.exit-btn(src='../../static/file/previous-icon-w.png')
       video#cam-window(autoplay playsinline)
       canvas#cam-sensor 
+      //- for debug
+      div
+        h1 方位
+          span#alpha
+      //- for debug
       #shoot-btn
       #restaurant-list.list 
         #element-1.elements
