modify manifest.json, server.js

--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -6,8 +6,7 @@ html
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js")
     script(src="../../static/js/homepage.js")
     script(src="../../static/js/app.js")
-    link(href="manifest.json", rel="manifest")
-    meta(name="theme-color" content="#44617B")
+    link(href="../../static/manifest.json", rel="manifest", crossorigin="use-credentials")
     meta(name="viewport" content="user-scalable=no, shrink-to-fit=no")
 
   body
