--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -157,93 +157,15 @@ html
       h1.title(align='center')
         b 歷史紀錄
       #history_list.list
-        .shop-item
-          p.shop-name(align='center') 大夯牛排館 Da-hang Steak house
-          p.score 4.4
-          .ratings
-            .empty_star ★★★★★
-            .full_star ★★★★★
-          p.command 1825則評論
-          p.phone-number 電話:06-2365768
-          p.business-hours 營業時間:11:00-21:00
-          .small-block 電話
-          .small-block 網站
-          .small-block 儲存
-
-        .shop-item
-          p.shop-name(align='center') 大夯牛排館 Da-hang Steak house
-          p.score 4.4
-          .ratings
-            .empty_star ★★★★★
-            .full_star ★★★★★
-          p.command 1825則評論
-          p.phone-number 電話:06-2365768
-          p.business-hours 營業時間:11:00-21:00
-          .small-block 電話
-          .small-block 網站
-          .small-block 儲存
-
-        .shop-item
-          p.shop-name(align='center') 大夯牛排館 Da-hang Steak house
-          p.score 4.4
-          .ratings
-            .empty_star ★★★★★
-            .full_star ★★★★★
-          p.command 1825則評論
-          p.phone-number 電話:06-2365768
-          p.business-hours 營業時間:11:00-21:00
-          .small-block 電話
-          .small-block 網站
-          .small-block 儲存
-
-        .shop-item
-          p.shop-name(align='center') 大夯牛排館 Da-hang Steak house
-          p.score 4.4
-          .ratings
-            .empty_star ★★★★★
-            .full_star ★★★★★
-          p.command 1825則評論
-          p.phone-number 電話:06-2365768
-          p.business-hours 營業時間:11:00-21:00
-          .small-block 電話
-          .small-block 網站
-          .small-block 儲存
-
-        .shop-item
-          p.shop-name(align='center') 大夯牛排館 Da-hang Steak house
-          p.score 4.4
-          .ratings
-            .empty_star ★★★★★
-            .full_star ★★★★★
-          p.command 1825則評論
-          p.phone-number 電話:06-2365768
-          p.business-hours 營業時間:11:00-21:00
-          .small-block 電話
-          .small-block 網站
-          .small-block 儲存
-
-        .shop-item
-          p.shop-name(align='center') 大夯牛排館 Da-hang Steak house
-          p.score 4.4
-          .ratings
-            .empty_star ★★★★★
-            .full_star ★★★★★
-          p.command 1825則評論
-          p.phone-number 電話:06-2365768
-          p.business-hours 營業時間:11:00-21:00
-          .small-block 電話
-          .small-block 網站
-          .small-block 儲存
-
-        .shop-item
-          p.shop-name(align='center') 大夯牛排館 Da-hang Steak house
-          p.score 4.4
-          .ratings
-            .empty_star ★★★★★
-            .full_star ★★★★★
-          p.command 1825則評論
-          p.phone-number 電話:06-2365768
-          p.business-hours 營業時間:11:00-21:00
-          .small-block 電話
-          .small-block 網站
-          .small-block 儲存
+        <!-- {shopname1} -->
+        <!-- {shopname2} -->
+        <!-- {shopname3} -->
+        <!-- {shopname4} -->
+        <!-- {shopname5} -->
+        <!-- {shopname6} -->
+        <!-- {shopname7} -->
+        <!-- {shopname8} -->
+        <!-- {shopname9} -->
+        <!-- {shopname10} -->
+        <!-- {shopname11} -->
+        <!-- {shopname12} -->        
