--- a/templates/login.pug
+++ b/templates/login.pug
@@ -1,18 +1,24 @@
+doctype htmls
 head
     title livefood
     meta(charset='UTF-8')
     meta(name="theme-color" content="#44617B")
     link(href="../../static/sass/dist/homepage.css",rel="stylesheet",type="text/css")
+    link(href="../../static/sass/dist/login.css",rel="stylesheet",type="text/css")
+    
+    script(src="https://code.jquery.com/jquery-3.6.0.min.js")
 body
     .container
         .title Food cam
         h1 登入
-        form#login(action="./login" methed="post") 
+        form#login 
             label(for="username") 帳號 
             input(type="text" name="username")
             br
             label(for="password") 密碼
             input(type="password" name="password") 
             br
-            button 註冊
-            button 登入
+            #signin-output
+            button(class="reg" type='submit') 註冊
+            button(class="log" type='submit') 登入
+    script(src='../../static/js/login.js')
