set pwa as limited scale

--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -7,7 +7,7 @@ html
     script(src="../../static/js/homepage.js")
     script(src="../../static/js/app.js")
     link(href="../../static/manifest.json", rel="manifest", crossorigin="use-credentials")
-    meta(name="viewport" content="user-scalable=no, shrink-to-fit=no")
+    meta(name="viewport" content="shrink-to-fit=no, maximum-scale=1.0, user-scalable=no")
 
   body
     #status-container
