show geo info on camera page for debug, modify server.js

--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -28,9 +28,12 @@ html
       video#cam-window(autoplay playsinline)
       canvas#cam-sensor 
       //- for debug
-      div
+      div#positioninfo
         h1 方位
           span#alpha
+        h1 定位
+          span#geoinfo
+
       //- for debug
       video#cam-window(autoplay)
       canvas#cam-sensor
