--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -114,6 +114,11 @@
 #camera-container
   display: none
 
+  #positioninfo
+    position: fixed
+    top: 0.5rem
+    left: 8rem
+    font-size: 1.5rem
   #camera-exit
     top: 2rem
     left: 2rem
