modify camera btn UI

--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -39,8 +39,8 @@ html
       canvas#cam-sensor
       img#cam-output(src="//:0")(alt="")
       #shoot-btn
-      #shoot-again-btn Again
-      #goto-list-btn List
+      img#shoot-again-btn(src='../../static/file/camera.png')
+      img#goto-list-btn(src='../../static/file/list.png')
       #restaurant-list.list 
         #element-1.elements
         #element-2.elements
