--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -175,36 +175,30 @@
       z-index: 2
   
   #shoot-again-btn:active
-
+    transform: scale(0.9)
   #shoot-again-btn
     display: block
     background-color: white
     position: absolute
-    transform: translate(-50%, 0%)
     height: 8rem
     width: 8rem
-    border-radius: 20%
-    bottom: 3rem
-    left: 25%
-    border: solid #BBB 1rem
-    font-size: 50px
-    text-align:center
+    padding: 1rem
+    border-radius: 2rem
+    bottom: 3.5rem
+    left: 21%
   
   #goto-list-btn:active
-
+    transform: scale(0.9)
   #goto-list-btn
     display: block
     background-color: white
     position: absolute
-    transform: translate(-50%, 0%)
     height: 8rem
     width: 8rem
-    border-radius: 20%
-    bottom: 3rem
-    left: 75%
-    border: solid #BBB 1rem
-    font-size: 50px
-    text-align:center
+    padding: 1rem
+    border-radius: 2rem
+    bottom: 3.5rem
+    right: 21%
 
   #restaurant-list.list 
     #element-1.elements
