--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -82,96 +82,18 @@ html
         b 我的最愛
       
       #favorite_list.list
-        .shop-item
-          p.shop-name(align='center') 大夯牛排館 Da-hang Steak house
-          p.score 4.4
-          .ratings
-            .empty_star ★★★★★
-            .full_star ★★★★★
-          p.command 1825則評論
-          a.phone-number(href='tel:062365768') 電話:06-2365768
-          p.business-hours 營業時間:11:00-21:00
-          .small-block 電話
-          .small-block 網站
-          .small-block 儲存
-
-        .shop-item
-          p.shop-name(align='center') 大夯牛排館 Da-hang Steak house
-          p.score 4.4
-          .ratings
-            .empty_star ★★★★★
-            .full_star ★★★★★
-          p.command 1825則評論
-          p.phone-number 電話:06-2365768
-          p.business-hours 營業時間:11:00-21:00
-          .small-block 電話
-          .small-block 網站
-          .small-block 儲存
-
-        .shop-item
-          p.shop-name(align='center') 大夯牛排館 Da-hang Steak house
-          p.score 4.4
-          .ratings
-            .empty_star ★★★★★
-            .full_star ★★★★★
-          p.command 1825則評論
-          p.phone-number 電話:06-2365768
-          p.business-hours 營業時間:11:00-21:00
-          .small-block 電話
-          .small-block 網站
-          .small-block 儲存
-
-        .shop-item
-          p.shop-name(align='center') 大夯牛排館 Da-hang Steak house
-          p.score 4.4
-          .ratings
-            .empty_star ★★★★★
-            .full_star ★★★★★
-          p.command 1825則評論
-          p.phone-number 電話:06-2365768
-          p.business-hours 營業時間:11:00-21:00
-          .small-block 電話
-          .small-block 網站
-          .small-block 儲存
-
-        .shop-item
-          p.shop-name(align='center') 大夯牛排館 Da-hang Steak house
-          p.score 4.4
-          .ratings
-            .empty_star ★★★★★
-            .full_star ★★★★★
-          p.command 1825則評論
-          p.phone-number 電話:06-2365768
-          p.business-hours 營業時間:11:00-21:00
-          .small-block 電話
-          .small-block 網站
-          .small-block 儲存
-          
-        .shop-item
-          p.shop-name(align='center') 大夯牛排館 Da-hang Steak house
-          p.score 4.4
-          .ratings
-            .empty_star ★★★★★
-            .full_star ★★★★★
-          p.command 1825則評論
-          p.phone-number 電話:06-2365768
-          p.business-hours 營業時間:11:00-21:00
-          .small-block 電話
-          .small-block 網站
-          .small-block 儲存
-
-        .shop-item
-          p.shop-name(align='center') 大夯牛排館 Da-hang Steak house
-          p.score 4.4
-          .ratings
-            .empty_star ★★★★★
-            .full_star ★★★★★
-          p.command 1825則評論
-          p.phone-number 電話:06-2365768
-          p.business-hours 營業時間:11:00-21:00
-          .small-block 電話
-          .small-block 網站
-          .small-block 儲存
+        <!-- {favorite1} -->
+        <!-- {favorite2} -->
+        <!-- {favorite3} -->
+        <!-- {favorite4} -->
+        <!-- {favorite5} -->
+        <!-- {favorite6} -->
+        <!-- {favorite7} -->
+        <!-- {favorite8} -->
+        <!-- {favorite9} -->
+        <!-- {favorite10} -->
+        <!-- {favorite11} -->
+        <!-- {favorite12} -->  
 
     #history-container.container
       img#history-exit.exit-btn(src='../../static/file/cross-icon.png')
