--- a/static/sass/login.sass
+++ b/static/sass/login.sass
@@ -4,3 +4,76 @@ form
 
   &#register
     display: none
+
+*
+  margin: 0
+  padding: 0
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
+  outline: none
+
+:root
+  --bg-color-1: #44617B
+  --bg-cam-btn: #EBF6F7
+  --bg-fav-btn: #BADCAD
+  --bg-his-btn: #FEF263
+
+  --main-btnsize: 15rem
+
+.container
+  position: fixed
+  background-color: var(--bg-color-1)
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+  .title
+    position: absolute
+    top: 10%
+    left: 10%
+    font-size: 10rem
+    width: 50%
+    line-height: 10rem
+    color: white
+  .input-container 
+    position: absolute
+    top: 38%
+    left: 10%
+    font-size: 3rem
+    font-color: black
+    right: 10%
+    color: black
+    background-color: var(--bg-cam-btn)
+    border-radius: 2rem
+    padding: 3rem 3rem 5rem
+  input
+    position: relative
+    left:2rem
+    width: 90%
+    height:5rem
+    font-size: 3rem
+    border-radius: 1rem
+
+.reg 
+  position: absolute
+  bottom:10%
+  right:30%
+  font-size: 3.5rem
+  background-color: #d5dce6
+  padding: 1rem
+  border-radius: 2rem
+.log 
+  position: absolute
+  bottom:10%
+  right:10%
+  font-size: 4rem
+  background-color: #d5dce6
+  padding: 1rem
+  border-radius: 2rem
+.create
+  position: absolute
+  bottom:5%
+  right:10%
+  font-size: 4rem
+  background-color: #d5dce6
+  padding: 1rem
+  border-radius: 2rem
