--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -12,6 +12,10 @@
 
   --main-btnsize: 15rem
 
+
+
+
+
 .container
   position: fixed
   background-color: var(--bg-color-1)
@@ -19,6 +23,16 @@
   left: 0
   width: 100%
   height: 100%
+
+  .title
+    position: absolute
+    top: 25%
+    left: 18%
+    font-size: 13rem
+    font-color: black
+    width: 50%
+    line-height: 10rem
+    color: white
 
   .exit-btn
     position: fixed
@@ -50,15 +64,6 @@
   display: block
   background-color: var(--bg-color-1)
 
-  #title
-    position: absolute
-    top: 25%
-    left: 18%
-    font-size: 13rem
-    font-color: black
-    width: 50%
-    line-height: 10rem
-    color: white
   #btn-group
     position: fixed
     transform: translate(-50%, -50%)
@@ -213,13 +218,6 @@
 #history-container
   display: none
 
-
-.title
-  font-size: 5rem
-  margin-bottom: 1rem
-  color: white
-  margin-top: 2rem
-
 .list-sw
   position: fixed
   right: 3rem
@@ -249,6 +247,7 @@
     border-radius: 3rem
     background-color: #DAE1F2
     margin-bottom: 2.5rem
+    padding: 1rem 2rem
 
     .shop-name
       font-size: 3rem
@@ -258,15 +257,14 @@
       font-size: 3rem
       margin-left: 30px
       float: left
-      line-height: 4.5rem
+      line-height: 3.5rem
 
     .ratings
       position: relative
       display: inline-block
       color: #ddd
-    
       overflow: hidden
-      font-size: 3rem
+      font-size: 2.5rem
     
       text-shadow: 0px 1px 0 #999
 
@@ -280,19 +278,22 @@
         overflow: hidden
         color: #D56A16
 
-    .command
-      font-size: 2rem
-      margin-left: 2rem
-    .phone-number, .business-hours
-      font-size: 2rem
+    .command, .phone-number, .business-hours
+      font-size: 1.5rem
       margin-left: 2rem
 
-    .small-block
-      line-height: 5.5rem
-      background-color: #94aeeb
-      font-size: 2rem
-      border-radius: 1rem
-      text-align: center
-      margin: 4rem
-      display: inline
-      padding: 0.5rem
+    .control_btn
+      height: 5rem
+      display: flex
+      flex-direction: row
+      flex-wrap: nowrap
+      justify-content: space-evenly
+      align-items: center
+
+      .small-block, .save-btn
+        background-color: #94aeeb
+        font-size: 2rem
+        border-radius: 1rem
+        text-align: center
+        display: inline
+        padding: 0.5rem
