--- a/static/sass/login.sass
+++ b/static/sass/login.sass
@@ -28,15 +28,16 @@ form
   height: 100%
   .title
     position: absolute
-    top: 10%
-    left: 10%
-    font-size: 10rem
+    top: 25%
+    left: 18%
+    font-size: 13rem
+    font-color: black
     width: 50%
     line-height: 10rem
     color: white
   .input-container 
     position: absolute
-    top: 38%
+    top: 48%
     left: 10%
     font-size: 3rem
     font-color: black
