--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -14,7 +14,7 @@ html
       img#gps-signal(src='../../static/file/gps-n.png')
 
     #home-container.container
-      .title Food cam
+      #title Food cam
       #btn-group
         #camera-btn.btns
           img#camera-icon(src='../../static/file/camera.png')
